[package]
name = "light-containerd"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
argh = "0.1.4"
dashmap = "3.11.10"
fallible_collections = "0.3.0"
hyper = "0.13.9"
libc = "0.2.80"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["fs", "macros", "net", "process", "rt-core", "signal"] }
tokio-seqpacket = "0.2.1"
uuid = { version = "0.8.1", features = ["v4"] }
warp = "0.2.5"

[dev-dependencies]
tokio = { version = "0.2", features = ["full", "test-util"] }
